Bug 34093 - Partial PDFEXPORT of particular Master Documents breaks hyperlinks
Summary: Partial PDFEXPORT of particular Master Documents breaks hyperlinks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: high major
Assignee: Ivan Timofeev (retired)
URL: http://wiki.documentfoundation.org/QA...
Whiteboard: target:3.7.0 target:3.6.0.0.beta3 tar...
Keywords:
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-02-09 08:43 UTC by Rainer Bielefeld Retired
Modified: 2023-10-17 07:01 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-02-09 08:43:11 UTC
I found  with "LibreOffice 3.3.0 RC4 - WIN7  Home Premium (64bit) German UI  [OOO330m19 (build 6 / tag 3.3.0.4)]", that Hyperlinks in particular master documents will will be broken after partial PDF export. PDF created by export of complete document works fine for hyperlinks.

You can see the problem in the documents of my testkit containing
- Master document MasterSampleAE.odm
- Several linked slave documents in folder Projektdateien
- Export MasterSampleAE.pdf (here links DO work)
- Partial export MasterSampleAE_part.pdf (links will NOT work)

Steps to reproduce:

0. Download and unzip test kit
1. open MasterSampleAE.odm
2. Update all
3. Menu 'File > Export To PDF > NewName - Pages 4-13 - JPG 85% 300dpi - 
   All Checkboxes in "Links" checked - Rest as default
  <export>
4. Open new.pdf
5. Try hyplerlinks in in TOC "Inhaltsverzeichnis" or any other, they
   will not work (and mouse pointer will not change to hyperlink view.

11. Restart from Step 1. but export comlpete document
12. Open new.pdf
13. Try hyplerlinks in in TOC "Inhaltsverzeichnis" or any other, they
   will work fine

I tried with a small new example document set, but there the problem did not occur. 
No Problem with OOo 3.4-dev

For my work that is a 3.3.1 blocker


Cédric, your area?

Download data for FTP transfer:

Server: bielefeldundbuss.de
User Name: f0025789
Password:  AERzjßf
Comment 1 Rainer Bielefeld Retired 2011-02-09 23:11:44 UTC
Today I also observed the problem with "Ooo-Dev 3.4.0 multilingual version English UI WIN XP: [OOo300m98 (Build 9568)]". But I never saw it with OOo 3.1.1. Unfortunately 3.1.1 crashes when I try to open complex master documents created with LibO.
Comment 2 Rainer Bielefeld Retired 2011-03-11 02:49:27 UTC
It seems I forgot to contribute the test kit; you will find it under a. m. URL
Comment 3 Jean-Baptiste Faure 2011-03-12 09:41:17 UTC
Hi Rainer,

I do not know why but it works if you check the checkbox "Export automatically inserted blank pages".
My other options under General are : "tagged PDF" and "Export bookmarks"

Tested with LibO 3.3.1 FR and LibO 3.3.2 RC1 FR under Ubuntu x86-64.

Best regards. JBF
Comment 4 Jean-Baptiste Faure 2011-03-12 09:46:28 UTC
(In reply to comment #3)
> Hi Rainer,
> 
> I do not know why but it works if you check the checkbox "Export automatically
> inserted blank pages".
> My other options under General are : "tagged PDF" and "Export bookmarks"
> 
> Tested with LibO 3.3.1 FR and LibO 3.3.2 RC1 FR under Ubuntu x86-64.
> 
> Best regards. JBF

I can't attach the PDF file because it is too big (1,7 Mio). If you want I can send you the file.

JBF
Comment 5 Rainer Bielefeld Retired 2011-03-12 10:58:29 UTC
(In reply to comment #4)
> I can't attach the PDF file because it is too big (1,7 Mio).

No need, I can confirm your workaround with "LibreOffice 3.3.2RC1  – WIN7  Home Premium  (64bit) German UI [OOO330m19 (Build:201 / tag 3.3.2.1)]".

I think I can read from your comment that we can set selections to NEW for ALL OS?

Unfortunately together with 
Bug 31606 - PRINTING selected pages of long documents pick up the wrong pagerange
the now visible "invisible pages" for my applications that workaround will not ease my life too much.
Comment 6 Jean-Baptiste Faure 2011-03-12 11:55:31 UTC
Yes, I think you are right. Status set to new.
Comment 7 Petr Mladek 2011-03-17 04:09:31 UTC
I have reproduced it with LO-3.3.2-rc2 build on Linux x86_64.

Cedric, could you please have a look?
I am afraid that Rainer nominated it as a blocker too late and we can't fix it in time for 3.3.2. It does not have a good workaround, so it would be nice to fix it for 3.3.3.
Comment 8 Petr Mladek 2011-03-17 08:03:53 UTC
After some thought, I am not convinced that this should be a blocker and should have the highest priority. I understand that it is annoying for you because it affects your work. On the other hand, the target of the link is clear because the page is printed in TOC. Also I am not sure how many people export just part of the document. I guess that there are other more critical bugs that affects more people.
Comment 9 Rainer Bielefeld Retired 2011-03-17 08:38:26 UTC
@Petr Mladek
I also believe that it's too late for 3.3.2 and that there might be some more critical issues, especially because there is a workaround. But I'm a little disappointed that LibO usability for my personal needs currently still is far behind OOo3.1.1 (although: OOo 3.4 also is not better). Pls. feel free to remove this one from the blockers list.
Comment 10 Rainer Bielefeld Retired 2011-05-03 21:21:31 UTC
Bug 35509 - libreoffice 3.3.3 release blockers / stoppers
is obsolete. New:
Bug 35673 - LibreOffice 3.4 most annoying bugs
Comment 11 Michael Meeks 2011-05-17 22:03:32 UTC
Drat - the attachment limit is really annoying ... I couldn't get to your server with the ß in the password ;-) presumably this is designed to block non-Germans ;-)
Comment 12 Rainer Bielefeld Retired 2011-05-18 04:38:18 UTC
@Michael 
Some days ago I created an alternative experimental attachment upload page for big Bugzilla-Attachments:
<http://wiki.documentfoundation.org/QA/Bugzilla-Attachments>

I replaced URL by the one to the WIKI where you will find the attachment
Comment 13 Rainer Bielefeld Retired 2011-06-09 07:03:02 UTC
@Michael Meeks:
Did you test with my sample from Wiki?
Comment 14 Rainer Bielefeld Retired 2012-03-27 09:02:33 UTC
3.4 lifecycle is terminated, so shift (coming from Bug 35509 - libreoffice 3.3.3 release blockers)  to “Bug 37361 LibreOffice 3.5 most annoying bugs”

Also a problem with OOo 3.3, so no regression, but inherited from OOo.
Comment 15 Julien Nabet 2012-05-12 14:43:52 UTC
I don't know if you can reproduce it with last LO version (3.5.3) but is there a simple pdf to test ?
Rainer : sorry I don't know what you mean in the comment 2, could you give explicitely the link ?
Comment 16 Rainer Bielefeld Retired 2012-05-13 01:03:17 UTC
(In reply to comment #15)
> I don't know if you can reproduce it with last LO version (3.5.3) 

Still a problem with all current WIN versions (and AOOo 3.4)

> a simple pdf to test ?
<http://wiki.documentfoundation.org/QA/Bugzilla-Attachments> in field "URL" between "QA" Contact and "Whiteboard"
Comment 17 Julien Nabet 2012-05-16 14:36:42 UTC
Sorry Rainer for the delay.

On pc Debian x86-64, with master updated today, I reproduced the problem with testkit.

I noticed this message on console logs for 4-13 only :
warn:vcl.gdi:1135:1:/home/julien/compile-libreoffice/libo/vcl/source/gdi/outdev.cxx:439: OutputDevice::~OutputDevice(): OutputDevice::Push() calls != OutputDevice::Pop() calls
Comment 18 Ivan Timofeev (retired) 2012-06-16 09:15:19 UTC
Looks like it gets confused with "automatically inserted blank pages" (again!). You'll find the links on the second page :) (don't move the mouse, just scroll down - you'll find the links). 

No problem if you check "Export automatically inserted blank pages".

Firstly I thought I broke it with
http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ad4d151dac1eb887d92200330e31af269d8d1fd
but then it did not work even in 3.3, so it is not me... :)
Comment 19 Ivan Timofeev (retired) 2012-06-16 12:30:45 UTC
My code from the commit above is definitely wrong (hell, I knew it!), I will spin a fix. Reassigned.
Comment 20 Not Assigned 2012-06-21 01:21:44 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db053e48d2ca17e1256eb12500f075488483603b

fdo#34093: fix error in calculation of page number of SwRect
Comment 21 Not Assigned 2012-06-21 01:29:02 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b6cab988b4dd7be88573aab99010aaac657f78f&g=libreoffice-3-6

fdo#34093: fix error in calculation of page number of SwRect


It will be available in LibreOffice 3.6.
Comment 22 Not Assigned 2012-06-21 06:07:11 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a1fd984c7cd4d97c8b039c75e8340e431554ed26&g=libreoffice-3-5

fdo#34093: fix error in calculation of page number of SwRect


It will be available in LibreOffice 3.5.6.
Comment 23 Buovjaga 2023-10-17 07:01:37 UTC
Notes for unit test writers:

Revert has to be done manually. Could be a bit complicated as the change touches several places.

PDF exports can be checked with pdfium, see for example sw/qa/extras/globalfilter/globalfilter.cxx