fdo#34093: fix error in calculation of page number of SwRect

StringRangeEnumerator (i.e. user's input) contains page numbers in a different
page range (it excludes empty pages). So:
- first map page numbers to a common range, then compare
- user's input can't contain empty pages, remove this check

Change-Id: I4fce5215272fc90f39c9e05d3f3604734a8aebe3